# billu

./: .coveragerc  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
pylogo/: README.md  pyproject.toml  script_animation.py  script_plot_agents.py  script_simulation.py  scripts_agents.py  scripts_space.py
pylogo/docs/source/: conf.py  index.rst
pylogo/pylogo/: agent.py  database.py  distributions.py  model.py  parameters.py  rough.py  rules.py  simulation.py  space.py  utils.py  visualization.py
pylogo/tests/: test_agent.py  test_distributions.py  test_model.py  test_rules.py  test_simulation.py  test_space.py  test_utils.py
