[project]
name = "pylogo"
version = "0.1.0"
description = ""
authors = [
    {name = "Suman Saurabh",email = "sumanan047@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sphinx (>=8.1.3,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
