[project]
name = "pylogo"
version = "0.1.0"
description = ""
authors = [
    {name = "Suman Saurabh",email = "sumanan047@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sphinx (>=8.1.3,<9.0.0)",
    "numpy (>=2.2.2,<3.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "pytest (>=8.3.4,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
